updated syntax to new rasa
Slack now working properly

--- a/workshop/credentials.yml
+++ b/workshop/credentials.yml
@@ -1,6 +1,6 @@
 # This file contains the credentials for the voice & chat platforms
 # which your bot is using.
-# https://rasa.com/docs/rasa/user-guide/messaging-and-voice-channels/
+# https://rasa.com/docs/rasa/messaging-and-voice-channels
 
 rest:
 #  # you don't need to provide anything here - this channel doesn't
@@ -14,20 +14,20 @@ rest:
 
 slack:
   slack_token: "xoxb-4501126098608-4490079335457-VfRySmuxxrCUlsRNc7Lzf9i1"
-  slack_channel: "https://rasa-bot-corp.slack.com/archives/C04E1CHV1QA"
+  slack_channel: "C04E1CHV1QA"
   slack_signing_secret: "3afd95fbc2e301f7f0a22c663445c649"
 
 #socketio:
 #  user_message_evt: <event name for user message>
-#  bot_message_evt: <event name for but messages>
+#  bot_message_evt: <event name for bot messages>
 #  session_persistence: <true/false>
 
 #mattermost:
 #  url: "https://<mattermost instance>/api/v4"
-#  team: "<mattermost team>"
-#  user: "<bot username>"
-#  pw: "<bot token>"
+#  token: "<bot token>"
 #  webhook_url: "<callback URL>"
 
+# This entry is needed if you are using Rasa X. The entry represents credentials
+# for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
   url: "http://localhost:5002/api"
