--- a/workshop/domain.yml
+++ b/workshop/domain.yml
@@ -1,33 +1,34 @@
+version: "2.0"
+
 intents:
-- greet
-- goodbye
-- bot_challenge
-- thanks
-- menu
-- full_date
-- day
-- order
-entities:
-- day
-- time
-- food
-- option
-- addition
-templates:
-  utter_greet:
-  - text: Hey! Welcome to our restaurant!
-  utter_goodbye:
-  - text: Bye
-  utter_iamabot:
-  - text: I am a bot, powered by Rasa.
-  utter_welcome:
-  - text: You're welcome.
+    - greet
+    - goodbye
+    - bot_challenge
+    - thanks
+    - menu
+    - full_date
+    - day
+    - order
+    
 actions:
-- utter_greet
-- utter_goodbye
-- utter_welcome
-- utter_which_day
-- utter_iamabot
-- action_get_menu
-- action_get_date
-- action_get_order
+    - utter_greet
+    - utter_goodbye
+    - utter_welcome
+    - utter_iamabot
+    - action_get_menu
+    - action_get_date
+    - action_get_order
+
+responses:
+  utter_greet:
+  - text: "Hey! Welcome to our restaurant!"
+  utter_goodbye:
+  - text: "Bye"
+  utter_iamabot:
+  - text: "I am a bot, powered by Rasa."
+  utter_welcome:
+  - text: "You're welcome."
+
+session_config:
+  session_expiration_time: 60
+  carry_over_slots_to_new_session: true
